Unreleased
==========

- Harmonized index name / discriminator in catalog setup with content schema
  and queries used in later examples.  Thanks to Douglas Cerna.

0.8.0 (2011-03-20)
==================

- Deprecated ``.search``-based querying of catalog in favor of newer
  query language(s) via ``.query``.  See docs for more info.

- Added a ``.docids()`` method to ``CatalogIndex``.

- Deprecated ``repoze.catalog.index.path2.CatalogPathIndex2``.

0.7.3 (2010-08-26)
==================

Features
--------

- Refuse to pickle instances of ``zodb.broken.Broken`` which are
  returned as the result of an index attempting to call a callable
  discriminator function.  This prevents edge cases where instances
  with out-of-sync code could too easily write Broken objects to the
  database, leaving them around for the next hapless unpickler to
  find.  This is particularly a problem because many of our
  discriminators are *functions*; the Broken machinery attempts to
  recover the state of a broken object when it is unpickled, but it
  cannot recover the state of an attempted function call.

0.7.2 (2010-06-17)
==================

Bug Fixes
---------

- Fix a bug which allowed the document map to map more than one docid
  onto the same address, which put the reverse and forward document
  map bookeeping out of sync with each other.

Packaging
---------

- Move benchmark directory into root of distribution instead of
  leaving it in package.  It interfered with normal operations of the
  setuptools testrunner.

- Deactivate "sortbench" console script.

- Remove "Development Status" Trove classifier.

- Bump version to 0.7.2.

- Disuse nose.collector as test_suite (use normal setuptools test runner).

- Remove (unused) TODO.txt.

- Disuse ez_setup.py.

- Make docs render properly in Google Chrome.

Backwards Incompatibilities
---------------------------

- When using ``DocumentMap.add`` with a ``docid`` argument that